--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,10 +17,10 @@
 
 <body class="">
     <div class="wrapper ">
-        <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="purple" data-background-color="white">
 
             <div class="logo">
-                <a href="" class="simple-text logo-normal">
+                <a class="simple-text logo-normal">
                     @AppInfo.SoftwareName
                 </a>
             </div>
@@ -36,7 +36,7 @@
             <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
                 <div class="container-fluid">
                     <div class="navbar-wrapper">
-                        <a class="navbar-brand" href="/">Dashboard</a>
+                        <a class="navbar-brand" href="@Url.Action("Index")">@ViewBag.Title</a>
                     </div>
 
                     <div class="collapse navbar-collapse justify-content-end">
@@ -48,10 +48,9 @@
                                     <i class="material-icons">person</i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                                    <a class="dropdown-item" href="#">Profile</a>
-                                    <a class="dropdown-item" href="#">Settings</a>
+                                    <a class="dropdown-item" href="@Url.Action("Settings")">Settings</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">Log out</a>
+                                    <a class="dropdown-item" href="@Url.Action("Logout", "Home")">Log out</a>
                                 </div>
                             </li>
                         </ul>
