--- a/Views/Shared/_PrinciNav.cshtml
+++ b/Views/Shared/_PrinciNav.cshtml
@@ -1,1 +1,44 @@
-﻿
+﻿<ul class="nav">
+    <li class="nav-item active  ">
+        <a class="nav-link" href="@Url.Action("Index", "Principal")">
+            <i class="material-icons">dashboard</i>
+            <p>Dashboard</p>
+        </a>
+    </li>
+    <li class="nav-item ">
+        <a class="nav-link" href="@Url.Action("Departments", "Principal")">
+            <i class="material-icons">person</i>
+            <p>Departments</p>
+        </a>
+    </li>
+    <li class="nav-item ">
+        <a class="nav-link" href="@Url.Action("HOD", "Principal")">
+            <i class="material-icons">person</i>
+            <p>HOD</p>
+        </a>
+    </li>
+    <li class="nav-item ">
+        <a class="nav-link" href="@Url.Action("Faculty", "Principal")">
+            <i class="material-icons">content_paste</i>
+            <p>Faculty</p>
+        </a>
+    </li>
+    <li class="nav-item ">
+        <a class="nav-link" href="@Url.Action("Meetings", "Principal")">
+            <i class="material-icons">content_paste</i>
+            <p>Meetings</p>
+        </a>
+    </li>
+    <li class="nav-item ">
+        <a class="nav-link" href="@Url.Action("Leaves", "Principal")">
+            <i class="material-icons">content_paste</i>
+            <p>Leaves</p>
+        </a>
+    </li>
+    <li class="nav-item ">
+        <a class="nav-link" href="@Url.Action("QuestionPapers", "Principal")">
+            <i class="material-icons">content_paste</i>
+            <p>Question Papers</p>
+        </a>
+    </li>
+</ul>
