--- a/Views/Shared/_HodNav.cshtml
+++ b/Views/Shared/_HodNav.cshtml
@@ -1,1 +1,38 @@
-﻿
+﻿<ul class="nav">
+    <li class="nav-item @ViewBag.DashboardActive">
+        <a class="nav-link" href="@Url.Action("Index", "Hod")">
+            <i class="material-icons">dashboard</i>
+            <p>Dashboard</p>
+        </a>
+    </li>
+    <li class="nav-item @ViewBag.NoticeActive">
+        <a class="nav-link" href="@Url.Action("NoticeBoards", "Hod")">
+            <i class="material-icons">event</i>
+            <p>Notice Boards</p>
+        </a>
+    </li>
+    <li class="nav-item @ViewBag.FacultyActive">
+        <a class="nav-link" href="@Url.Action("Faculty", "Hod")">
+            <i class="material-icons">supervised_user_circle</i>
+            <p>Faculty</p>
+        </a>
+    </li>
+    <li class="nav-item @ViewBag.MeetingsActive">
+        <a class="nav-link" href="@Url.Action("Meetings", "Hod")">
+            <i class="material-icons">date_range</i>
+            <p>Meetings</p>
+        </a>
+    </li>
+    <li class="nav-item @ViewBag.LeavesActive">
+        <a class="nav-link" href="@Url.Action("Leaves", "Hod")">
+            <i class="material-icons">exit_to_app</i>
+            <p>Leaves</p>
+        </a>
+    </li>
+    <li class="nav-item @ViewBag.QuestionPapersActive">
+        <a class="nav-link" href="@Url.Action("QuestionPapers", "Hod")">
+            <i class="material-icons">content_paste</i>
+            <p>Question Papers</p>
+        </a>
+    </li>
+</ul>
